force-app/main/default/objects/Opportunity/fields/Related_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Financial Account</label>
    <referenceTo>Financial_Accounts__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>