force-app/main/default/objects/Opportunity/fields/Related_Referral__c.field-meta.xml
<CustomField>
    <fullName>Related_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Referral</label>
    <referenceTo>Referral__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>