force-app/main/default/objects/Opportunity/fields/Remaining_Term__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Term__c</fullName>
    <label>Remaining Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>