force-app/main/default/objects/Opportunity/fields/Requested_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Loan_Amount__c</fullName>
    <label>Requested Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>