force-app/main/default/objects/Opportunity/fields/Requesting_Officer_for_Fee_Exception__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Officer_for_Fee_Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Officer for Fee Exception</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>