force-app/main/default/objects/Opportunity/fields/Role_Summary__c.field-meta.xml
<CustomField>
    <fullName>Role_Summary__c</fullName>
    <formula>IF( or(Opportunity_Owner_Role__c = &quot;Ag Manager&quot;,Opportunity_Owner_Role__c = &quot;Ag Lending&quot;,Opportunity_Owner_Role__c = &quot;Correspondent Lender&quot;),&quot;AG-CB&quot; ,IF( or(Opportunity_Owner_Role__c = &quot;Commercial Banking Executive&quot;,Opportunity_Owner_Role__c = &quot;Commercial Banking Manager (Grose)&quot;,Opportunity_Owner_Role__c = &quot;Commercial Banking (Grose)&quot;,Opportunity_Owner_Role__c = &quot;Commercial Banking Manager (Thompson)&quot;,Opportunity_Owner_Role__c = &quot;Commercial Banking (Thompson)&quot;),&quot;Commerical Banking&quot; ,&quot;&quot;))</formula>
    <label>Role Summary</label>
    <type>Text</type>
</CustomField>