force-app/main/default/objects/Opportunity/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <inlineHelpText>This field is for Dollars Invested and is for Investments and Planning ONLY</inlineHelpText>
    <label>Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>