force-app/main/default/objects/Opportunity/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FI Sales Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>