force-app/main/default/objects/Opportunity/fields/Servicer__c.field-meta.xml
<CustomField>
    <fullName>Servicer__c</fullName>
    <label>Servicer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FNBO</fullName>
            </value>
            <value>
                <fullName>DMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>