force-app/main/default/objects/Opportunity/fields/Stage_Override__c.field-meta.xml
<CustomField>
    <fullName>Stage_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox, available only to Admins, will prevent the validation rules that run against Opportunity Stage progressions and permit an Opportunity to move backward out of a stage.</description>
    <label>Stage Override</label>
    <type>Checkbox</type>
</CustomField>