force-app/main/default/objects/Opportunity/fields/Target_Equity__c.field-meta.xml
<CustomField>
    <fullName>Target_Equity__c</fullName>
    <description>Calculated the Target Equity to calculate Target ROE at the summary level.</description>
    <formula>PLNDR__FS_Target_ROE__c * PLNDR__FS_Loan_Average_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>