force-app/main/default/objects/Opportunity/fields/Total_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposits__c</fullName>
    <description>This field combines the Precision Lender Average Balance with the Standard Deposits from other opportunity types</description>
    <formula>PLNDR__FS_Deposit_Average_Balance__c + Deposits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deposits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>