force-app/main/default/objects/Opportunity/fields/Total_Loan_Net_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Net_Commitment__c</fullName>
    <description>Combines the loan amount from Wealth Opportunities and Precision Lender Opportunities</description>
    <formula>Loan_Amount__c + PLNDR__FS_Loan_Net_Commitment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Loan Net Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>