force-app/main/default/objects/Opportunity/fields/Total_Opp_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Opp_Revenue__c</fullName>
    <formula>( Annual_Revenue__c +  One_Time_Fees__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Opp Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>