force-app/main/default/objects/Opportunity/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <description>Combines Pre Tax Revenue from Precision Lender with the Annual Revenue field used by other business units to get a total</description>
    <formula>Annual_Revenue__c  +PLNDR__FS_Pre_Tax_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>