force-app/main/default/objects/Opportunity/fields/Walk_In__c.field-meta.xml
<CustomField>
    <fullName>Walk_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Walk-In</label>
    <type>Checkbox</type>
</CustomField>