force-app/main/default/objects/Opportunity/recordTypes/Commercial_Lending.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Lending</fullName>
    <active>true</active>
    <businessProcess>Company</businessProcess>
    <description>Commercial Lending Record Type</description>
    <label>Commercial Lending</label>
</RecordType>