force-app/main/default/objects/Opportunity/recordTypes/Corporate_Treasury_Services.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Treasury_Services</fullName>
    <active>true</active>
    <businessProcess>Corporate Treasury Services</businessProcess>
    <description>CTS Opportunities</description>
    <label>Corporate Treasury Services</label>
</RecordType>