force-app/main/default/objects/Opportunity/recordTypes/First_Bank_Card.recordType-meta.xml
<RecordType>
    <fullName>First_Bank_Card</fullName>
    <active>true</active>
    <businessProcess>BankCard</businessProcess>
    <description>Commercial Card Opportunities</description>
    <label>First Bankcard</label>
</RecordType>