force-app/main/default/objects/Opportunity/recordTypes/FNB_Mortgage.recordType-meta.xml
<RecordType>
    <fullName>FNB_Mortgage</fullName>
    <active>true</active>
    <businessProcess>Mortgage</businessProcess>
    <description>For FNB Mortgage Retail Lending Opportunities</description>
    <label>FNB Mortgage - Retail</label>
</RecordType>