force-app/main/default/objects/Opportunity/recordTypes/FNB_Mortgage_ARM.recordType-meta.xml
<RecordType>
    <fullName>FNB_Mortgage_ARM</fullName>
    <active>true</active>
    <businessProcess>Mortgage</businessProcess>
    <description>Used in the automated ARM adjustment process flow</description>
    <label>FNB Mortgage - ARM</label>
</RecordType>