force-app/main/default/objects/Opportunity/recordTypes/FNB_Mortgage_Consumer_Direct.recordType-meta.xml
<RecordType>
    <fullName>FNB_Mortgage_Consumer_Direct</fullName>
    <active>true</active>
    <businessProcess>Mortgage</businessProcess>
    <description>Used for FNB Mortgage Consumer Direct Opportunities</description>
    <label>FNB Mortgage - Consumer Direct</label>
</RecordType>