force-app/main/default/objects/Opportunity/recordTypes/Lauritzen_Consumer_Banking.recordType-meta.xml
<RecordType>
    <fullName>Lauritzen_Consumer_Banking</fullName>
    <active>true</active>
    <businessProcess>Company</businessProcess>
    <description>Lauritzen Bank Retail banking</description>
    <label>Lauritzen Consumer Banking</label>
</RecordType>