force-app/main/default/objects/Opportunity/recordTypes/New_Wealth_Management_Test.recordType-meta.xml
<RecordType>
    <fullName>New_Wealth_Management_Test</fullName>
    <active>true</active>
    <businessProcess>New Wealth Process</businessProcess>
    <description>Wealth Management Opportunities</description>
    <label>Wealth Management</label>
</RecordType>