force-app/main/default/objects/Opportunity/recordTypes/Retail_Banking.recordType-meta.xml
<RecordType>
    <fullName>Retail_Banking</fullName>
    <active>true</active>
    <businessProcess>Retail Banking</businessProcess>
    <description>Retail Banking Opportunities</description>
    <label>Retail Banking</label>
</RecordType>