force-app/main/default/objects/Opportunity/recordTypes/Wealth_Financial_Planning.recordType-meta.xml
<RecordType>
    <fullName>Wealth_Financial_Planning</fullName>
    <active>true</active>
    <businessProcess>Financial Planning</businessProcess>
    <description>Financial Planning Opportunities</description>
    <label>Wealth- Financial Planning</label>
</RecordType>