force-app/main/default/objects/Opportunity/validationRules/AddtlReasonLostInfoReq.validationRule-meta.xml
<ValidationRule>
    <fullName>AddtlReasonLostInfoReq</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISPICKVAL(StageName, &quot;Closed Lost&quot;),
ISBLANK( Addtl_Reason_Lost_Information__c )
)</errorConditionFormula>
    <errorDisplayField>Addtl_Reason_Lost_Information__c</errorDisplayField>
    <errorMessage>Additional Reason Lost information is required for this Opportunity Stage.</errorMessage>
</ValidationRule>