force-app/main/default/objects/Opportunity/validationRules/Closed_Won_Require_DOB.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Require_DOB</fullName>
    <active>true</active>
    <description>Require a date of birth to be listed on the associated person customer prior to marking an opportunity &#39;closed won.&#39;</description>
    <errorConditionFormula>AND( 
   TEXT(StageName) = &quot;Closed Won&quot;,
   TEXT(Account.Birth_Date__pc)=&quot;&quot;,
   Account.RecordType.Name = &quot;Consumer Prospect&quot;)</errorConditionFormula>
    <errorMessage>A date of birth is required on the associated customer record prior to marking this opportunity &#39;Closed Won.&#39;</errorMessage>
</ValidationRule>