force-app/main/default/objects/Opportunity/validationRules/COI_Source_no_referred_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>COI_Source_no_referred_Customer</fullName>
    <active>true</active>
    <description>A COI sourced opportunity cannot also be referred by a customer</description>
    <errorConditionFormula>AND(
     NOT(ISBLANK( Lead_Source_COI__c)) ,
     RecordTypeId  = &#39;0120c000001hhkz&#39;,
     NOT(ISBLANK( Referred_by_Customer__c ))
)</errorConditionFormula>
    <errorMessage>A COI Sourced opportunity cannot also be referred by a customer</errorMessage>
</ValidationRule>