force-app/main/default/objects/Opportunity/validationRules/Enforce_New_Wealth_Client_Source_Field2.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_New_Wealth_Client_Source_Field2</fullName>
    <active>true</active>
    <description>If Opportunity type = New Wealth Client, then the New Wealth Client Source field must be populated</description>
    <errorConditionFormula>AND( 
  
  OR(  ISPICKVAL(  Type  , &quot;Existing Client - New Line of Business&quot;), ISPICKVAL(  Type  , &quot;Existing Client - Add to Relationship&quot;)),
     $RecordType.Name = &quot;Wealth Management&quot;, 
    NOT(ISBLANK(TEXT( New_Wealth_Client_Source__c ))))</errorConditionFormula>
    <errorDisplayField>New_Wealth_Client_Source__c</errorDisplayField>
    <errorMessage>This field can only be populated if Opportunity Type = &quot;New Wealth Client&quot;</errorMessage>
</ValidationRule>