force-app/main/default/objects/Opportunity/validationRules/Growth_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Growth_Opp</fullName>
    <active>true</active>
    <description>Define acceptable values when Pcard Type = Growth</description>
    <errorConditionFormula>And(
 ISPICKVAL( P_Card_Type__c , &quot;Growth&quot;),
     ISBLANK( Additional_Spend_Growth__c ) )</errorConditionFormula>
    <errorDisplayField>Additional_Spend_Growth__c</errorDisplayField>
    <errorMessage>Additional Spend Growth must be populated for Growth P-Card Opportunities</errorMessage>
</ValidationRule>