force-app/main/default/objects/Opportunity/validationRules/Growth_Opp_Annual_Spend.validationRule-meta.xml
<ValidationRule>
    <fullName>Growth_Opp_Annual_Spend</fullName>
    <active>true</active>
    <description>Define acceptable Annual Spend values when Pcard Type = Growth</description>
    <errorConditionFormula>And(
 ISPICKVAL( P_Card_Type__c , &quot;Growth&quot;),
     NOT( ISBLANK( Annual_Spend__c  ) ))</errorConditionFormula>
    <errorDisplayField>Annual_Spend__c</errorDisplayField>
    <errorMessage>Annual Spend must be blank for Growth P-Card Opportunities</errorMessage>
</ValidationRule>