force-app/main/default/objects/Opportunity/validationRules/Non_Growth_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Growth_Opp</fullName>
    <active>true</active>
    <description>If Pcard type &lt;&gt; Growth, then Annual Spend Growth must be blank</description>
    <errorConditionFormula>And(
   Not(ISPICKVAL( P_Card_Type__c , &quot;Growth&quot;)),
      Not ISBLANK( Additional_Spend_Growth__c ) )</errorConditionFormula>
    <errorDisplayField>Additional_Spend_Growth__c</errorDisplayField>
    <errorMessage>Additional Spend Growth can only be populated when Pcard type = Growth</errorMessage>
</ValidationRule>